# docker_fastapi_solid

./: pyproject.toml
backend/: main.py
tests/: test_docker_fastapi_solid_sample.py
