[tool.poetry]
name = "docker_fastapi_solid_sample"
version = "0.1.0"
description = ""
authors = ["Ads <Adsis369@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
